--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,8 +1,5 @@
 @import "bootstrap/bootstrap";
+@import "core";
+@import "variables";
+@import "bootswatch";
 
-@btn-font-weight: 300;
-@font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
-
-body, label, .checkbox label {
-	font-weight: 300;
-}
