--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,5 +1,26 @@
 @import "bootstrap/bootstrap";
 @import "core";
-@import "variables";
 @import "bootswatch";
+@import "variables";
 
+body {
+  padding-top: 0;
+}
+
+#banner {
+  text-align: center;
+  margin: 0;
+}
+
+.page-header h1 {
+  font-size: 6em;
+  padding-top: 20%;
+}
+
+.bs-docs-section {
+  margin: 0
+}
+
+footer {
+  margin: 5em 0 0;
+}
