--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -24,3 +24,11 @@ body {
 footer {
   margin: 5em 0 0;
 }
+
+.form-group.required .control-label:after {
+  color: #d00;
+  content: "*";
+  position: absolute;
+  margin-left: 8px;
+  top:7px;
+}
