--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -13,7 +13,7 @@ body {
 }
 
 .page-header h1 {
-//  font-size: 6em;
+  //  font-size: 6em;
   padding-top: 20%;
 }
 
@@ -30,5 +30,9 @@ footer {
   content: "*";
   position: absolute;
   margin-left: 8px;
-  top:7px;
+  top: 7px;
+}
+
+.stMainServices, .stHBubble {
+  height: 22px !important;
 }
