--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -35,3 +35,14 @@ footer {
 .stMainServices, .stHBubble {
   height: 22px !important;
 }
+
+#scroll_down {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, 0);
+  width: 5%;
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+}
